saving error distributions

--- a/notebooks/swis_random_sample_results.ipynb
+++ b/notebooks/swis_random_sample_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "7ab33492",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,290 @@
     "import random\n",
     "import seaborn as sns\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3a61142",
+   "metadata": {},
+   "source": [
+    "## Paper Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ec931645",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fc_errors = pd.read_csv('../swis_combined_nn_results/paper_errors.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "28f56805",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"4\" halign=\"left\">error</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>median</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>model_name</th>\n",
+       "      <th>Level</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>concat_pc_with_grid_tcn2_for_cluster</th>\n",
+       "      <th>pc</th>\n",
+       "      <td>0.172797</td>\n",
+       "      <td>0.173280</td>\n",
+       "      <td>0.006391</td>\n",
+       "      <td>0.161089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SWIS_APPROACH_A_more_layer_without_norm_cluster</th>\n",
+       "      <th>pc</th>\n",
+       "      <td>0.177919</td>\n",
+       "      <td>0.178464</td>\n",
+       "      <td>0.007766</td>\n",
+       "      <td>0.167694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>conventional_tcn</th>\n",
+       "      <th>pc</th>\n",
+       "      <td>0.183785</td>\n",
+       "      <td>0.184284</td>\n",
+       "      <td>0.005548</td>\n",
+       "      <td>0.175258</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SWIS_APPROACH_A_more_layer_without_norm_weather_centroids</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.185497</td>\n",
+       "      <td>0.186433</td>\n",
+       "      <td>0.013307</td>\n",
+       "      <td>0.163372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>conventional_TCN_approach</th>\n",
+       "      <th>pc</th>\n",
+       "      <td>0.186163</td>\n",
+       "      <td>0.185484</td>\n",
+       "      <td>0.008425</td>\n",
+       "      <td>0.173131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>concat_pc_with_grid_tcn2</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.187198</td>\n",
+       "      <td>0.179427</td>\n",
+       "      <td>0.023802</td>\n",
+       "      <td>0.151432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SWIS_APPROACH_A_more_layer_without_norm</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.188320</td>\n",
+       "      <td>0.184350</td>\n",
+       "      <td>0.014599</td>\n",
+       "      <td>0.170702</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>concat_pc_with_grid_tcn2_weather_centroids</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.189337</td>\n",
+       "      <td>0.191567</td>\n",
+       "      <td>0.007720</td>\n",
+       "      <td>0.173922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>conventional_cnn</th>\n",
+       "      <th>pc</th>\n",
+       "      <td>0.205869</td>\n",
+       "      <td>0.205306</td>\n",
+       "      <td>0.003810</td>\n",
+       "      <td>0.201256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>conventional_lstm</th>\n",
+       "      <th>pc</th>\n",
+       "      <td>0.217670</td>\n",
+       "      <td>0.219172</td>\n",
+       "      <td>0.009495</td>\n",
+       "      <td>0.193765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">naive</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.287622</td>\n",
+       "      <td>0.287622</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.287622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pc</th>\n",
+       "      <td>0.287622</td>\n",
+       "      <td>0.287622</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.287622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>conventional_tcn</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.297700</td>\n",
+       "      <td>0.300895</td>\n",
+       "      <td>0.015372</td>\n",
+       "      <td>0.267192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>conventional_cnn</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.304764</td>\n",
+       "      <td>0.305690</td>\n",
+       "      <td>0.005968</td>\n",
+       "      <td>0.294751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>conventional_lstm</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.307540</td>\n",
+       "      <td>0.306970</td>\n",
+       "      <td>0.005135</td>\n",
+       "      <td>0.298692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">arima</th>\n",
+       "      <th>grid</th>\n",
+       "      <td>0.329496</td>\n",
+       "      <td>0.329496</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.329496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pc</th>\n",
+       "      <td>0.367706</td>\n",
+       "      <td>0.367706</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.367706</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                             error            \\\n",
+       "                                                              mean    median   \n",
+       "model_name                                         Level                       \n",
+       "concat_pc_with_grid_tcn2_for_cluster               pc     0.172797  0.173280   \n",
+       "SWIS_APPROACH_A_more_layer_without_norm_cluster    pc     0.177919  0.178464   \n",
+       "conventional_tcn                                   pc     0.183785  0.184284   \n",
+       "SWIS_APPROACH_A_more_layer_without_norm_weather... grid   0.185497  0.186433   \n",
+       "conventional_TCN_approach                          pc     0.186163  0.185484   \n",
+       "concat_pc_with_grid_tcn2                           grid   0.187198  0.179427   \n",
+       "SWIS_APPROACH_A_more_layer_without_norm            grid   0.188320  0.184350   \n",
+       "concat_pc_with_grid_tcn2_weather_centroids         grid   0.189337  0.191567   \n",
+       "conventional_cnn                                   pc     0.205869  0.205306   \n",
+       "conventional_lstm                                  pc     0.217670  0.219172   \n",
+       "naive                                              grid   0.287622  0.287622   \n",
+       "                                                   pc     0.287622  0.287622   \n",
+       "conventional_tcn                                   grid   0.297700  0.300895   \n",
+       "conventional_cnn                                   grid   0.304764  0.305690   \n",
+       "conventional_lstm                                  grid   0.307540  0.306970   \n",
+       "arima                                              grid   0.329496  0.329496   \n",
+       "                                                   pc     0.367706  0.367706   \n",
+       "\n",
+       "                                                                              \n",
+       "                                                               std       min  \n",
+       "model_name                                         Level                      \n",
+       "concat_pc_with_grid_tcn2_for_cluster               pc     0.006391  0.161089  \n",
+       "SWIS_APPROACH_A_more_layer_without_norm_cluster    pc     0.007766  0.167694  \n",
+       "conventional_tcn                                   pc     0.005548  0.175258  \n",
+       "SWIS_APPROACH_A_more_layer_without_norm_weather... grid   0.013307  0.163372  \n",
+       "conventional_TCN_approach                          pc     0.008425  0.173131  \n",
+       "concat_pc_with_grid_tcn2                           grid   0.023802  0.151432  \n",
+       "SWIS_APPROACH_A_more_layer_without_norm            grid   0.014599  0.170702  \n",
+       "concat_pc_with_grid_tcn2_weather_centroids         grid   0.007720  0.173922  \n",
+       "conventional_cnn                                   pc     0.003810  0.201256  \n",
+       "conventional_lstm                                  pc     0.009495  0.193765  \n",
+       "naive                                              grid        NaN  0.287622  \n",
+       "                                                   pc          NaN  0.287622  \n",
+       "conventional_tcn                                   grid   0.015372  0.267192  \n",
+       "conventional_cnn                                   grid   0.005968  0.294751  \n",
+       "conventional_lstm                                  grid   0.005135  0.298692  \n",
+       "arima                                              grid        NaN  0.329496  \n",
+       "                                                   pc          NaN  0.367706  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fc_errors = fc_errors.groupby(['model_name','Level']).agg({'error': ['mean', 'median', 'std', 'min']})\n",
+    "\n",
+    "fc_errors.sort_values(by =('error', 'mean'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "79380622",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.80434782608696"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(0.184 - 0.177)/0.184 *100"
    ]
   },
   {
